chore(serialization): rewrite variant serialization